--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -1,24 +1,89 @@
-FROM node:18-alpine
+# Multi-stage build for Next.js production optimization
+FROM node:18-alpine AS base
 
+# Install system dependencies
+RUN apk add --no-cache libc6-compat
+
+# Install pnpm globally
 RUN npm install -g pnpm
 
+# ===============================
+# Dependencies stage
+# ===============================
+FROM base AS deps
 WORKDIR /app
 
-# Copy package files
+# Copy workspace and package files
 COPY package.json pnpm-workspace.yaml ./
+COPY packages/shared/package.json ./packages/shared/
+COPY apps/web/package.json ./apps/web/
+
+# Install dependencies
+RUN pnpm install --frozen-lockfile
+
+# ===============================
+# Build stage
+# ===============================
+FROM base AS builder
+WORKDIR /app
+
+# Copy node_modules from deps stage
+COPY --from=deps /app/node_modules ./node_modules
+COPY --from=deps /app/packages ./packages
+COPY --from=deps /app/apps ./apps
+
+# Copy source code
 COPY packages/ ./packages/
 COPY apps/web/ ./apps/web/
 
-# Install dependencies
-RUN pnpm install
-
 # Build shared package first
-RUN cd packages/shared && pnpm build
-
-# Build the application
-WORKDIR /app/apps/web
+WORKDIR /app/packages/shared
 RUN pnpm build
 
+# Build the Next.js application
+WORKDIR /app/apps/web
+
+# Set environment variables for build
+ENV NEXT_TELEMETRY_DISABLED=1
+ENV NODE_ENV=production
+
+RUN pnpm build
+
+# ===============================
+# Production stage
+# ===============================
+FROM base AS production
+WORKDIR /app
+
+# Create non-root user for security
+RUN addgroup -g 1001 -S nodejs && \
+    adduser -S nextjs -u 1001
+
+# Set environment to production
+ENV NODE_ENV=production
+ENV NEXT_TELEMETRY_DISABLED=1
+
+# Copy Next.js standalone build
+COPY --from=builder --chown=nextjs:nodejs /app/apps/web/.next/standalone ./
+COPY --from=builder --chown=nextjs:nodejs /app/apps/web/.next/static ./apps/web/.next/static
+COPY --from=builder --chown=nextjs:nodejs /app/apps/web/public ./apps/web/public
+
+# Set working directory
+WORKDIR /app/apps/web
+
+# Switch to non-root user
+USER nextjs
+
+# Expose the port that Next.js runs on
 EXPOSE 3000
 
-CMD ["pnpm", "start"]
+# Set port environment variable
+ENV PORT=3000
+ENV HOSTNAME="0.0.0.0"
+
+# Add health check
+HEALTHCHECK --interval=30s --timeout=3s --start-period=10s --retries=3 \
+  CMD node -e "require('http').get('http://localhost:3000/', (res) => { process.exit(res.statusCode === 200 ? 0 : 1) })" || exit 1
+
+# Start the application
+CMD ["node", "server.js"]
