--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -12,6 +12,7 @@ services:
     github:
       branch: main
       deploy_on_push: true
+    source_dir: .
     dockerfile_path: apps/api/Dockerfile
     http_port: 3001
     instance_count: 1
@@ -58,6 +59,7 @@ services:
     github:
       branch: main
       deploy_on_push: true
+    source_dir: .
     dockerfile_path: apps/web/Dockerfile
     http_port: 3000
     instance_count: 1
