--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -33,8 +33,8 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.0.0",
     "@nestjs/typeorm": "^10.0.0",
-    "@qa-dashboard/shared": "workspace:*",
     "@puppeteer/browsers": "^1.9.1",
+    "@qa-dashboard/shared": "workspace:*",
     "@types/qrcode": "^1.5.5",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
@@ -60,6 +60,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^3.0.9",
     "@types/passport-local": "^1.0.35",
